further refined drawing, now to work on the dataset side

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Particle Effect</title>
 	<script src="./particleEffect.js" type="module"></script>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+	</style>
 </head>
 <body>
 </body>
